<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RCS settings</string>
    <string name="title_msg">Information</string>
    <string name="menu_about">About</string>
    <string name="rcs_settings_label_ok">OK</string>
    <string name="rcs_settings_label_cancel">Cancel</string>
    <string name="rcs_settings_title_settings">RCS Settings</string>
    <string name="rcs_settings_title_userprofile_settings">User profile settings</string>
    <string name="rcs_settings_title_messaging_settings">Messaging settings</string>
    <string name="rcs_settings_title_filetransfer_invitation">File transfer settings</string>
    <string name="rcs_settings_title_chat_invitation">Chat settings</string>
    <string name="rcs_settings_title_about">About settings</string>
    <string name="rcs_settings_summary_about">About the RCS Core stack</string>
    <string name="rcs_settings_summary_messaging_settings">Manage messaging settings</string>
    <string name="rcs_settings_summary_rcs_service_on">Select to turn off the RCS service</string>
    <string name="rcs_settings_summary_rcs_service_off">Select to turn on the RCS service</string>
    <string name="rcs_settings_summary_min_battery_level">Stop the RCS service if battery low</string>
    <string name="rcs_settings_summary_image_resize_option">Select the resize option for outgoing image transfer</string>
    <string name="rcs_settings_summary_ft_auto_accept">Auto accept file transfer</string>
    <string name="rcs_settings_summary_ft_auto_accept_in_roaming">Auto accept file transfer while roaming</string>
    <string name="rcs_settings_summary_chat_displayed_notification">Send displayed notification during a chat</string>
    <string name="rcs_settings_summary_messaging_method">Select messaging method</string>
    <string name="rcs_settings_label_displayed_notification">Displayed notification</string>
    <string name="rcs_settings_label_rcs_service">RCS service</string>
    <string name="rcs_settings_label_confirm">Confirmation</string>
    <string name="rcs_settings_label_rcs_service_shutdown">RCS service will be terminated</string>
    <string name="rcs_settings_label_ft_auto_accept">Auto accept</string>
    <string name="rcs_settings_label_ft_auto_accept_in_roaming">Auto accept in roaming</string>
    <string name="rcs_settings_label_min_battery_level">Minimum battery level</string>
    <string name="rcs_settings_label_messaging_method">Messaging method</string>
    <string name="rcs_settings_label_albatros_20">Albatros 2.0</string>
    <string name="rcs_settings_label_blackbird_15">Blackbird 1.5</string>
    <string name="rcs_settings_label_unknown">Unknown</string>
	<string name="rcs_settings_label_wait_cnx_start">Waiting end of initialization</string>
	
    <!-- About menu -->
    <string name="label_about_title">RCS Core stack</string>
    <string name="label_about_release">Release: %s</string>
    <string name="label_about_api">API release: %s</string>
    <string name="label_api_unavailable">RCS service not available</string>
    <string name="label_api_failed">Call API method has failed</string>
    <string name="label_service_not_available">The service is not available. Please retry later.</string>
    <string name="text_service_activate_unchangeable">RCS activation cannot be changed</string>

    <string-array name="rcs_settings_list_messaging_method_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="rcs_settings_list_messaging_method_label">
        <item>Automatic</item>
        <item>RCS</item>
        <item>Non RCS</item>
    </string-array>
    <string-array name="rcs_settings_list_battery_level_value">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
    </string-array>
    <string-array name="rcs_settings_list_battery_level_label">
        <item>Never stop</item>
        <item>5%</item>
        <item>10%</item>
        <item>20%</item>
    </string-array>

    <string name="rcs_settings_summary_userprofile_settings">Manage user profile settings</string>
    <string name="rcs_settings_title_caller_id">Caller identity</string>
    <string name="rcs_settings_title_displayname">Display name</string>
    <string name="rcs_settings_summary_edit_displayname">Display name associated to my phone number in outgoing calls</string>
    <string name="rcs_settings_label_image_resize_option">Image resize option</string>

    <string-array name="rcs_settings_list_image_resize_option_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="rcs_settings_list_image_resize_option_label">
        <item>Always perform</item>
        <item>Only above maximum size</item>
        <item>Ask</item>
    </string-array>

</resources>